# controllers/orderController.js
@@ -8,7 +8,9 @@ const User = require('../models/userModel');
 
 const TaxiOrder = require('../models/taxiOrderModel');
 const TruckOrder = require('../models/truckOrderModel');
+const RateModel = require('../models/rateModel');
 const { log } = require('console');
+const { isSet } = require('util/types');
 
 
 // Taxi order yaratish
@@ -56,24 +58,26 @@ exports.getMyOrders = async (req, res) => {
         }]
     */
     try {
-        
+
 
         const orders = await sequelize.query(
             `SELECT o.id, r1.name1 as from_location, r2.name1 as to_location,
-             o.passenger_count, o.pochta,  t.name1 as time, os.name1 as status
+             o.passenger_count, o.pochta,  t.name1 as time, os.name1 as status,
+             o.status as status_id, ${req.user.role == 1 ? `rt.driver_rating` : `rt.passenger_rating`} as rating
              FROM taxi_orders o
              LEFT JOIN regions r1 ON o.from_location = r1.id
              LEFT JOIN regions r2 ON o.to_location = r2.id
+             LEFT JOIN ratings rt ON rt.order_id = o.id
              LEFT JOIN times t ON o.time_id = t.id
              LEFT JOIN order_statuses os ON o.status = os.id
-             WHERE ${req.user.role === 1 ? `o.passenger_id = ${req.user.id}` : `o.driver_id = ${req.user.id}` }
+             WHERE ${req.user.role == 1 ? `o.passenger_id = ${req.user.id}` : `o.driver_id = ${req.user.id}`}
              ORDER BY o.id DESC
             `,
             { type: QueryTypes.SELECT }
         );
-        res.status(200).json({ 
-            status: 200, 
-            orders 
+        res.status(200).json({
+            status: 200,
+            orders
         });
 
     } catch (error) {
@@ -94,6 +98,7 @@ exports.getNewTaxiOrders = async (req, res) => {
         const orders = await sequelize.query(
             `SELECT o.id, r1.name1 as from_location, r2.name1 as to_location,
              o.passenger_count, o.pochta,  t.name1 as time, os.name1 as status,
+             o.status as status_id,
                 u.name
              FROM taxi_orders o
              LEFT JOIN vehicles v ON v.user_id = ${req.user.id}
@@ -108,9 +113,9 @@ exports.getNewTaxiOrders = async (req, res) => {
             `,
             { type: QueryTypes.SELECT }
         );
-        res.status(200).json({ 
-            status: 200, 
-            orders 
+        res.status(200).json({
+            status: 200,
+            orders
         });
 
     } catch (error) {
@@ -119,7 +124,143 @@ exports.getNewTaxiOrders = async (req, res) => {
     }
 }
 
+//Taxi orderni qabul qilish
+exports.acceptTaxiOrder = async (req, res) => {
+    /*  #swagger.tags = ['Orders']
+        #swagger.security = [{
+            "apiKeyAuth": []
+        }]
+        #swagger.parameters['body'] = {
+            in: 'body',
+            schema: {
+                $order_id: 1
+            }
+        }   
+    */
+    const { order_id } = req.body;
 
+
+    try {
+
+        // Get order by id
+        const orders = await sequelize.query(
+            `SELECT o.id, o.status
+             FROM taxi_orders o
+             WHERE o.id = ${order_id} ${req.user.role == 2? ` AND o.driver_id = ${req.user.id} ` : ''}
+             ORDER BY o.id limit 1
+            `,
+            { type: QueryTypes.SELECT }
+        );
+
+        
+
+        if (isSet(orders) &&orders[0].status == 2) {
+            const status = 1;
+            const driver_id = null;
+            const order = await TaxiOrder.update({ driver_id, status }, {
+                where: { id: order_id }
+            });
+        } else {
+            const driver_id = req.user.id;
+            const status = 2;
+            const order = await TaxiOrder.update({ driver_id, status }, {
+                where: { id: order_id }
+            });
+        }
+
+
+
+        res.status(200).json({
+            status: 200,
+            message: 'Order accepted successfully'
+        });
+
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ message: 'Server error' });
+    }
+}
+
+//Taxi orderni qabul qilish
+exports.finishTaxiOrder = async (req, res) => {
+    /*  #swagger.tags = ['Orders']
+        #swagger.security = [{
+            "apiKeyAuth": []
+        }]
+        #swagger.parameters['body'] = {
+            in: 'body',
+            schema: {
+                $order_id: 1
+            }
+        }   
+    */
+    const { order_id } = req.body;
+    const status = 3;
+    try {
+
+        const order = await TaxiOrder.update({ status }, {
+            where: { id: order_id }
+        });
+
+        res.status(200).json({
+            status: 200,
+            message: 'Order finished successfully'
+        });
+
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ message: 'Server error' });
+    }
+}
+
+exports.ratingJourney = async (req, res) => {
+    /*  #swagger.tags = ['Orders']
+    #swagger.security = [{
+        "apiKeyAuth": []
+    }]
+    #swagger.parameters['body'] = {
+    in: 'body',
+    schema: {
+        $order_id: 12,
+        $rate: 3.5,
+        $comment_id: 2
+    }
+}
+*/
+    const { order_id, rate, comment_id = null } = req.body;
+    const passenger_id = req.user.role == 1? req.user.id :null;
+    const passenger_rating = req.user.role > 1? rate :null;
+    const driver_rating = req.user.role == 1? rate :null;
+    const driver_id = req.user.role > 1? req.user.id :null;
+
+    
+
+    try {
+        // 1️⃣ Order allaqachon baholanganligini tekshiramiz
+        const existingRating = await RateModel.findOne({ where: { order_id } });
+
+        if (existingRating) {
+            return res.status(400).json({
+                status: 'error',
+                message: 'Order already has a rating'
+            });
+        }
+
+        // 2️⃣ Yangi baho yaratamiz
+        const rating = await RateModel.create({
+            passenger_id, order_id, driver_rating, passenger_rating, driver_id, comment_id
+        });
+
+        res.status(201).json({
+            status: 'success',
+            message: 'Rating created successfully',
+            rating
+        });
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ message: 'Server error' });
+    }
+}
 
 
 
